[package]
name = "jitash-jsonrpc"
version = "0.15.0"
authors = ["Jitash <jitash@foxmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/jitash/rust-jsonrpc/"
repository = "https://github.com/jitash/rust-jsonrpc/"
documentation = "https://docs.rs/jitash-jsonrpc/"
description = "Rust support for the JSON-RPC 2.0 protocol"
keywords = [ "protocol", "json", "http", "jsonrpc" ]
readme	 = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = [ "simple_http", "simple_tcp" ]
# A bare-minimum HTTP transport.
simple_http = [ "base64" ]
# A transport that uses `minreq` as the HTTP client.
minreq_http = [ "base64", "minreq" ]
# Basic transport over a raw TcpListener
simple_tcp = []
# Basic transport over a raw UnixStream
simple_uds = []
# Enable Socks5 Proxy in transport
proxy = ["socks"]


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = [ "raw_value" ] }

base64 = { version = "0.21.2", optional = true }
minreq = { version = "2.7.0", features = ["json-using-serde"], optional = true }
socks = { version = "0.3.4", optional = true}
reqwest = { version = "0.11", features = ["blocking", "json"] }

[workspace]
members = ["fuzz", "integration_test"]
